Adding pictures html

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,20 @@
     <title>Portfolio One</title>
 </head>
 <body>
-    
-    
+    <div id="020"><img src="./images/020.png" alt="Amsterdammertje"></div>
+    <div id="bagel"><img src="./images/bagel.png" alt="Bagel"></div>
+    <div id="bridge"><img src="./images/bridge.png" alt="Manhattan Bridge"></div>
+    <div id="canon"><img src="./images/canon.png" alt="Canon AE1"></div>
+    <div id="cat"><img src="./images/cat.png" alt="Cat"></div>
+    <div id="chrysler"><img src="./images/chrysler.png" alt="Chrysler Building"></div>
+    <div id="dean"><img src="./images/dean.png" alt="Dean Street"></div>
+    <div id="flat"><img src="./images/flat.png" alt="Flat"></div>
+    <div id="gracht"><img src="./images/gracht.png" alt="Amsterdam"></div>
+    <div id="macbook"><img src="./images/macbook.png" alt="MacBook Pro"></div>
+    <div id="pizza"><img src="./images/pizza.png" alt="Pizza Slice"></div>
+    <div id="sky"><img src="./images/sky.png" alt="Clouds"></div>
+    <div id="subway"><img src="./images/subway.png" alt="D Train"></div>
+    <div id="technics"><img src="./images/technics.png" alt="Technics SL-1200"></div>
+    <div id="tv"><img src="./images/tv.png" alt="Fernsehturm"></div>
 </body>
 </html>
