--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <title>Portfolio One</title>
 </head>
 <body>
-    <div id="clouds"><img src="./images/clouds.png" alt="Clouds"></div>
+    <div id="macbook"><img src="./images/macbook-clickhere.png" alt="MacBook"></div>
+    <!-- <div id="clouds"><img src="./images/clouds.png" alt="Clouds"></div>
     <div id="dean"><img src="./images/dean.png" alt="Streetsign"></div>
     <div id="flat"><img src="./images/flat.png" alt="Flat"></div>
     <div id="gracht"><img src="./images/gracht.png" alt="Amsterdam"></div>
@@ -22,6 +23,6 @@
     <div id="pizza"><img src="./images/pizza.png" alt="Pizza Slice"></div>
     <div id="bagel"><img src="./images/bagel.png" alt="Bagel"></div>
     <div id="canon"><img src="./images/canon.png" alt="Canon AE1"></div>
-    <div id="macbook"><img src="./images/macbook.png" alt="MacBook Pro"></div>
+    <div id="macbook"><img src="./images/macbook.png" alt="MacBook Pro"></div> -->
 </body>
 </html>
