Styling landing page layout

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <title>Portfolio One</title>
 </head>
 <body>
-    <div id="macbook"><img src="./images/macbook-clickhere.png" alt="MacBook"></div>
+    <div id="macbook"><a href="./html/about.html" target="_blank"><img src="./images/macbook-clickhere.png" alt="MacBook"></a></div>
+    <!-- <div id="macbook"><img src="./images/macbook-clickhere.png" alt="MacBook"></div> -->
     <!-- <div id="clouds"><img src="./images/clouds.png" alt="Clouds"></div>
     <div id="dean"><img src="./images/dean.png" alt="Streetsign"></div>
     <div id="flat"><img src="./images/flat.png" alt="Flat"></div>
