--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/about.css">
     <title>About Daan</title>
 </head>
 <body>
     <header>
-        <div></div>
-        <div>Daan van der Putte</div>
-    </header>
-    <main>
-        <section>
+        <div id="macbook"><img src="../images/macbook-dvdp.png" alt="MacBook"></div>
+        <div id="cities">
             <div>Amsterdam</div>
             <div>Berlin</div>
             <div>New York City</div>
-        </section>
+        </div>
+    </header>
+    <main>
         <section>
             DCI
         </section>
