Changing structure about.html

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -18,14 +18,14 @@
     </header>
     <main>
         <section>
-            DCI
+            <h1>Interests</h1>
         </section>
         <section>
-            Interests
+            <h1>DCI</h1>
+        </section>
+        <section>
+            <h1>Contact</h1>
         </section>
     </main>
-    <footer>
-        Contact
-    </footer>
 </body>
 </html>
