Adding content about.html

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,12 +19,21 @@
     <main>
         <section>
             <h1>Interests</h1>
+            <p>Music / Photography / Design / Architecture / Cities / Maps / Biking / Plants</p>
         </section>
         <section>
             <h1>DCI</h1>
+            <p>2021-2023: Web Developer</p>
         </section>
         <section>
             <h1>Contact</h1>
+                <ul>
+                    <li><a href="http://" target="_blank">Website</a></li>
+                    <li><a href="mailto:daanvanderputte@protonmail.com">daanvanderputte@pm.me</a></li>
+                    <li><a href="http://www.github.com/daanvanderputte" target="_blank">github.com/daanvanderputte</a></li>
+                    <li><a href="http://www.linkedin.com" target="_blank">Daan van der Putte</a></li>
+                </ul>
+            </li>
         </section>
     </main>
 </body>
