--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Portfolio One</title>
+    <title>DVDP Collage</title>
 </head>
 <body>
     <div id="macbook"><a href="./html/about.html" target="_blank"><img src="./images/macbook-clickhere.png" alt="MacBook"></a></div>
