Adding images and styling layout

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -22,8 +22,9 @@
             <p>Music / Photography / Design / Architecture / Cities / Maps / Biking / Plants</p>
         </section>
         <section>
-            <h1>DCI</h1>
-            <p>2021-2023: Web Developer</p>
+            <h1>Code</h1>
+            <p>2021-2023: Web Development at <a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">Digital Career Institute</a></p>
+            <p> < HTML5 CSS SASS npm > </p>
         </section>
         <section>
             <h1>Contact</h1>
@@ -36,5 +37,7 @@
             </li>
         </section>
     </main>
+    <div><img id="camera" src="../images/canon.png" alt="Camera"></div>
+    <div><img id="turntable" src="../images/technics.png" alt="Turntable"></div>
 </body>
 </html>
