Adding media query mobile

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h1>Interests</h1>
-            <p>Music / Photography / Design / Architecture / Cities / Maps / Biking / Plants</p>
+            <p>Music / Photography / Design / Architecture / Cities / Maps / Nature</p>
         </section>
         <section>
             <h1>Code</h1>
