Changed hover transition

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -24,7 +24,7 @@
         <section>
             <h1>Code</h1>
             <p>2021-2023: Web Development at <a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">Digital Career Institute</a></p>
-            <p> < HTML5 CSS SASS npm > </p>
+            <p> < Markdown HTML5 CSS SASS npm git > </p>
         </section>
         <section>
             <h1>Contact</h1>
