Changing link styling

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -22,11 +22,21 @@
             <p>Music / Photography / Design / Architecture / Cities / Maps / Nature</p>
         </section>
         <section>
-            <h1>Code</h1>
-            <p>2021-2023: Web Development at <a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">Digital Career Institute</a></p>
-            <p> < Markdown HTML5 CSS SASS npm git > </p>
+            <h1>Skills</h1>
+            <p>2021-2023: Web Development at <div id="dci"><a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">Digital Career Institute</a></div></p>
+            <p>Markdown / HTML5 / CSS / SASS / npm / git</p>
         </section>
         <section>
+            <h1>Contact</h1>
+                <ul>
+                    <li id="website"><a href="http://" target="_blank">Website</a></li>
+                    <li id="email"><a href="mailto:daanvanderputte@protonmail.com">Email</a></li>
+                    <li id="github"><a href="http://www.github.com/daanvanderputte" target="_blank">GitHub</a></li>
+                    <li id="linkedin"><a href="http://www.linkedin.com" target="_blank">LinkedIn</a></li>
+                </ul>
+            </li>
+        </section>
+        <!-- <section>
             <h1>Contact</h1>
                 <ul>
                     <li id="website"><a href="http://" target="_blank">Website</a></li>
@@ -35,7 +45,7 @@
                     <li id="linkedin"><a href="http://www.linkedin.com" target="_blank">Daan van der Putte</a></li>
                 </ul>
             </li>
-        </section>
+        </section> -->
     </main>
     <div><img id="camera" src="../images/canon.png" alt="Camera"></div>
     <div><img id="turntable" src="../images/technics.png" alt="Turntable"></div>
