--- a/src/html/about.html
+++ b/src/html/about.html
@@ -23,7 +23,7 @@
         </section>
         <section>
             <h1>Skills</h1>
-            <p>2021-2023: Web Development at <div id="dci"><a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">Digital Career Institute</a></div></p>
+            <p>2021-2023: Web Development at <div id="dci"><a href="https://digitalcareerinstitute.org/courses/web-development-course" target="_blank">DCI Berlin</a></div></p>
             <p>Markdown / HTML5 / CSS / SASS / npm / git</p>
         </section>
         <section>
